crates/sol-types/tests/ui/type.stderr
error: empty tuples are not allowed
   --> tests/ui/type.rs:145:9
    |
145 |         () t;
    |         ^^

error: single element tuples must have a trailing comma
   --> tests/ui/type.rs:151:14
    |
151 |         (bool) t;
    |              ^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:157:9
    |
157 |         bytes0 a;
    |         ^^^^^^

error: fixed bytes range is 1-32
   --> tests/ui/type.rs:163:9
    |
163 |         bytes33 a;
    |         ^^^^^^^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:169:9
    |
169 |         uint0 a;
    |         ^^^^^

error: uintX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:175:9
    |
175 |         uint264 a;
    |         ^^^^^^^

error: uintX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:181:9
    |
181 |         uint7 a;
    |         ^^^^^

error: invalid size: number would be zero for non-zero type
   --> tests/ui/type.rs:187:9
    |
187 |         int0 a;
    |         ^^^^

error: intX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:193:9
    |
193 |         int264 a;
    |         ^^^^^^

error: intX must be a multiple of 8 up to 256
   --> tests/ui/type.rs:199:9
    |
199 |         int7 a;
    |         ^^^^
